# whispscribe

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json
.claude/: settings.local.json
.github/workflows/: release.yml
scripts/: generate-icons.mjs
src/: App.css  App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.dev.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/resources/: README.md
src-tauri/src/: downloader.rs  exporter.rs  hardware.rs  lib.rs  main.rs  whisper.rs
src/components/: DropZone.tsx  ExportOptions.tsx  ModelSelector.tsx  Onboarding.tsx  Settings.tsx  TranscriptOutput.tsx
src/utils/: detectModel.ts
