[package]
name = "whispscribe"
version = "0.1.0"
description = "Local offline audio/video transcription powered by Whisper"
authors = []
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "whispscribe_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri       = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
sysinfo     = "0.32"
reqwest     = { version = "0.12", default-features = false, features = ["stream", "native-tls"] }
tokio       = { version = "1", features = ["full"] }
futures-util = "0.3"
symphonia   = { version = "0.5", features = ["all"] }
rubato      = "0.15"

# Metal GPU acceleration is Apple-only — the "metal" feature passes
# GGML_METAL=ON to cmake which requires Foundation.framework, unavailable
# on Windows and Linux.
[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs  = { version = "0.13", features = ["metal"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
whisper-rs  = { version = "0.13" }

